# survhive

./: .gitignore  ALS_benchmarks.ipynb  Esempio.ipynb  GETTING_STARTED.md  INSTALL.md  LICENSE  Makefile  README.md  TESTING.md  environment.yml  esempio.py  gb_test_survival_output.ipynb  optimization_test.ipynb  optimization_test_DHS.ipynb  optimization_test_DSM.ipynb  optimization_test_GrBSA.ipynb  optimization_test_RSF.ipynb  optimization_test_coxnet.ipynb  optimization_test_fastCPH.ipynb  optimization_test_fastCPH.py  optimization_test_flchain.ipynb  optimization_test_gsbg2.ipynb  optimization_test_metabric.ipynb  optimization_test_random.ipynb  optuna_test.ipynb  prerun_coxnet.ipynb  pyproject.toml  requirements.txt  survhive_example.ipynb  test_metrics.ipynb  test_survival_output.ipynb  test_survtrace.ipynb  test_wrapped_fastCPH.ipynb
Datasets/: flchain.csv  support.csv
conda-reqs/: README.md  base-env.yml  dev.yml  fastcph-env.yml  hive-env.yml  sksurv-env.yml  survtrace-env.yml  survwrap-pycox-env.yml  tosa-auton-env.yml  tosa-env.yml
docs/: index.html  search.js  survhive.html
jupyter_examples/: auton_CV_DSM_example.ipynb  auton_wrapping.ipynb  comparison_example.ipynb  datasets.ipynb  test_pycox.ipynb
references/: Esempio.ipynb  auton_DSM_example.ipynb
survhive/: __init__.py  adapter.py  auton_adapters.py  datasets.py  gb_test_toy_datasets.ipynb  lassonet_adapters.py  metrics.py  optimization.py  pycox_adapters.py  sksurv_adapters.py  survtrace_adapters.py  util.py
survwrap/: __init__.py  adapter.py  auton_adapters.py  datasets.py  hyper.py  lassonet_adapters.py  metrics.py  optimization.py  pycox_adapters.py  sksurv_adapters.py  survtrace_adapters.py  util.py
tests/: common.py  (+20 more)
(+27 files in other folders)
